--- a/k8s/clusterrole.yaml
+++ b/k8s/clusterrole.yaml
@@ -24,3 +24,17 @@ rules:
       - patch
       - update
       - watch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: gh-agent-argocd
+  namespace: self-hosted-runners
+roleRef:
+  kind: Role
+  name: continuous-deployment
+  apiGroup: rbac.authorization.k8s.io
+subjects:
+- kind: ServiceAccount
+  name: default # Name is case sensitive
+  namespace: self-hosted-runners
