--- a/k8s/clusterrole.yaml
+++ b/k8s/clusterrole.yaml
@@ -26,7 +26,7 @@ rules:
       - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   name: gh-agent-argocd
   namespace: self-hosted-runners
