--- a/.github/workflows/gha-workflow.yml
+++ b/.github/workflows/gha-workflow.yml
@@ -21,8 +21,8 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echko Hello, world!
 
       # Runs docker hello-world
       - name: Hello from Docker
-        run: docker run hello-world
+        run: dockker run hello-world
